# arkanoid

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/shader/: background.shader  ball.shader  brick.shader  button.shader  default.frag  default.shader  default.vert  life.shader  score.shader  wall.shader
src/: CMakeLists.txt  ar-arcanoid.cpp  ar-arkanoid.cpp
src/config/: config.cpp  config.h  directories.h.in
src/game/: Game.cpp  Game.h
src/game/game-objects/: game-objects.h
src/game/physics/: physics.cpp  physics.h
src/graphics/: gfx.h  shared.h
src/graphics/object-3d/: Object3D.cpp  Object3D.h
src/graphics/object-3d/shapes/: Cube.h  Plane.h  Sphere.h  mesh-generation.cpp  mesh-generation.h
src/graphics/opengl/: OpenGLAPI.cpp  OpenGLAPI.h  OpenGLContext.cpp  OpenGLContext.h
src/graphics/shader/: Shader.cpp  Shader.h  ShaderType.cpp  ShaderType.h
src/graphics/texture/: Texture.cpp  Texture.h
src/graphics/window/: Window.cpp  Window.h
src/helpers/: help.cpp  help.h
src/pose/: arkanoid.h  pose.h  types.h
src/pose/draw/: draw.cpp  draw.h
src/pose/marker/: Marker.cpp  Marker.h
src/pose/marker/marker-detector/: MarkerDetector.cpp  MarkerDetector.h
src/pose/math/: pose-estimation.cpp  pose-estimation.h
src/pose/processor/: GroupProcessor.h  Processor.h  VecProcessor.h
src/pose/processor/processor-chain/: ProcessorChain.cpp  ProcessorChain.h
src/pose/video/: Video.cpp  Video.h
src/pose/window/: Window.cpp  Window.h
src/utils/: file-path.cpp  file-path.h  global.cpp  global.h  helpers.cpp  helpers.h  utils.h
(+10 files in other folders)
